--- a/index.html
+++ b/index.html
@@ -44,14 +44,27 @@
             </div>
 
             <br>
-            <button type="submit" class="btn btn-primary">Reset Colours</button> 
+            <button type="submit" class="btn btn-primary">Reset Colours</button>
         </form>
     </div>
+
+    <!-- footer -->
+    <footer class="bg-light text-center text-lg-start">
+        <!-- Copyright -->
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+            © 2023 Copyright:
+            <a class="text-dark" href="https://github.com/kanishkjain0263" target="_blank"
+                rel="noopener noreferrer">Kanishk Jain</a>
+        </div>
+        <!-- Copyright -->
+    </footer>
 
     <!-- Bootstrap JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/js/bootstrap.bundle.min.js"></script>
     <!-- Custom JavaScript -->
     <script src="script.js"></script>
+
+
 </body>
 
 </html>
