--- a/index.html
+++ b/index.html
@@ -7,37 +7,47 @@
     <title>Smart Lighting Control Interface</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.2/css/bootstrap.min.css">
+    <!-- Font Awesome  -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+    integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <div class="container my-5">
-        <h1 class="text-center">Smart Lighting Control Interface</h1>
+        
         <form>
-            <h2 class="my-4">Control Panel</h2>
+            <h1 class="text-center">Smart Lighting Control Interface</h1>
             <div class="form-group mb-3">
                 <label for="light-select" class="form-label">Select a Light:</label>
-                <select class="form-control" id="light-select">
-                    <option value="light1">Light 1</option>
-                    <option value="light2">Light 2</option>
-                    <option value="light3">Light 3</option>
-                </select>
+                <div class="input-group">
+                    <select class="form-control" id="light-select">
+                        <option value="light1">Light 1</option>
+                        <option value="light2">Light 2</option>
+                        <option value="light3">Light 3</option>
+                    </select>
+                    <div class="input-group-append">
+                        <span class="input-group-text"><i class="fas fa-caret-down"></i></span>
+                    </div>
+                </div>
             </div>
-            <br>
+
+
             <div class="light" id="light1">
                 <h2>Light 1</h2>
                 <label for="light1-color">Color</label>
                 <input type="color" id="light1-color" value="#ffffff">
             </div>
             <br>
-            <div class="light" id="light2">
+            <div class="light" id="light2" style="display:none;">
                 <h2>Light 2</h2>
                 <label for="light2-color">Color</label>
                 <input type="color" id="light2-color" value="#ffffff">
             </div>
             <br>
-            <div class="light" id="light3">
+            <div class="light" id="light3" style="display:none;">
                 <h2>Light 3</h2>
                 <label for="light3-color">Color</label>
                 <input type="color" id="light3-color" value="#ffffff">
@@ -56,7 +66,6 @@
             <a class="text-dark" href="https://github.com/kanishkjain0263" target="_blank"
                 rel="noopener noreferrer">Kanishk Jain</a>
         </div>
-        <!-- Copyright -->
     </footer>
 
     <!-- Bootstrap JavaScript -->
